Fix spacing issue with bullet items

--- a/styles/list/__item/list__item.css
+++ b/styles/list/__item/list__item.css
@@ -7,15 +7,10 @@
     align-items: center;
 }
 
-/* .list__item::marker {
-    color: var(--brown-800);
-    font-weight: bolder;
-    padding-right: var(--spacing-200);
-} */
-
 .list__item::before {
     content: "•";
     color: var(--brown-800);
     padding-left: var(--spacing-100);
     margin-right: var(--spacing-200);
+    min-width: var(--spacing-200);
 }
